<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.inmob.ui.inicio.InicioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmob.ui.perfil.PerfilFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_perfil"

        >
        <action
            android:id="@+id/action_perfilFragment_to_PassFragment"
            app:destination="@id/nav_pass" />
    </fragment>

    <fragment
        android:id="@+id/nav_pass"
        android:name="com.example.inmob.ui.pass.PassFragment"
        android:label="@string/cambiar_clave"
        tools:layout="@layout/fragment_pass" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.inmob.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmueble" />

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.inmob.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" />

    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.example.inmob.ui.contratos.ContratosFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contratos" />



</navigation>
